# modelithe-tool

./: Cargo.toml  Dioxus.toml  README.md
assets/: tailwind.css
